--- a/public/mockup.html
+++ b/public/mockup.html
@@ -1,10 +1,28 @@
 <html>
 	<header>
 		<title>Mock-up page</title>
-		<link href="mockup.css" style="stylesheet"  type="text/css">
-		<script src="javascripts/jquery.js"
+		<link href="stylesheets/mockup.css" rel="stylesheet"  type="text/css">
+		<script src="javascripts/jquery.js" ></script>
 	</header>
 	<body>
-					
+		<div id="bigWrapper">
+			<div id="header" >
+				<div id="topMenu">	
+					<div id="menuWrapper">
+						<div id="menuBar">
+							<ul>
+								<li><a href="#">Home</a></li>
+								<li><a href="#">About</a></li>						
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>	
+			<div id="content">
+				<a href="#" class="signup_button round">sign up</a>	
+						
+			</div>
+			<!--div id="footer"></div-->	
+		</div>
 	</body>
 </html>
